--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,9 @@
-name: "build-test"
+name: 'build-test'
 on:
   push:
     branches:
       - main
-      - "releases/*"
+      - 'releases/*'
 
 jobs:
   build:
@@ -42,10 +42,3 @@ jobs:
           mkdir files
           echo "Hello" > files/file-0.txt
           echo "Hello" > files/file-1.txt
-      - name: Upload multiple files
-        uses: ./
-        with:
-          dropbox_access_token: ${{ secrets.DROPBOX_ACCESS_TOKEN }}
-          src: files/*.txt
-          dest: /test/
-          multiple: true
