--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,9 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
-          npm install
+          yarn
       - run: |
-          npm run all
+          yarn all
   test:
     runs-on: ubuntu-latest
     steps:
