--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "strict": true,
-    "outDir": "./dist",
+    "outDir": "./lib",
     "rootDir": "./src"
   },
   "exclude": ["node_modules", "**/*.test.ts"]
