--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'Upload to Dropbox'
+name: 'Upload and Sharing to Dropbox'
 description: 'Upload files to Dropbox'
 author: 'NoriyukiMatsumoto'
 branding:
